# cpp_python_video

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
